--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -59,20 +59,23 @@
                          class="schedule-draft-item animate-repeat" layout="column">
                         <div flex layout="row" layout-align="start center">
                             <div layout="row" class="schedule-block-name-div" style="cursor: text">
-                                <span class="schedule-block-id-text" style="cursor: pointer;" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
+                                <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                      class="schedule-block-id-text" style="cursor: pointer;" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
                                 <i>{{item.owner}}</i>
                             </div>
 
                             <span flex style="min-width: 300px; margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
 
-                            <span style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
+                            <span ng-class="{'green-color': item.state === 'ACTIVE'}"
+                                  style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
                                 {{item.state}}
                             </span>
                             <span style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
                                 {{item.verification_state}}
                             </span>
                             <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                                <span style="text-transform: uppercase;">{{item.type}}</span>
+                                <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                      style="text-transform: uppercase;">{{item.type}}</span>
                             </div>
 
                             <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
