--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -32,7 +32,7 @@
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
                           style="margin-right: 4px;"></span>
                 </span>
-                <span style="max-width: 250px;min-width: 250px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                <span style="max-width: 225px;min-width: 225px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
                     <span style="padding: 8px">Desired Time</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
@@ -50,7 +50,9 @@
                     <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
 
                     <div layout="row" class="schedule-block-name-div">
-                        <span class="schedule-block-id-text">{{::item.id_code}}</span>
+                        <span class="schedule-block-id-text"
+                              ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}">
+                            {{::item.id_code}}</span>
                         <i>{{::item.owner}}</i>
                     </div>
                     <input ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
@@ -58,13 +60,14 @@
                            ng-model="item.description" placeholder="Description"/>
 
                     <md-select ng-model="item.type" aria-label="Schedule Draft Type" style="margin-top: 4px; width: 134px; margin-left: 4px; margin-right:4px;"
+                               ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
                                class="md-primary" ng-click="item.isDirty = true; vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();">
                         <md-option ng-value="type" ng-repeat="type in vm.types">{{type}}</md-option>
                     </md-select>
                     <input ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text" aria-label="Select a Date and Time" title="UTC"
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
-                    <span style="min-width: 50px; transition: 0s;" ng-show="!item.isDirty"></span>
+                    <span class="sb-row-button" ng-show="!item.isDirty"></span>
                     <span ng-if="item.pendingVerify" class="sb-row-button"></span>
                     <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
@@ -104,7 +107,7 @@
         <md-list layout="column">
             <md-item ng-if="vm.selectedScheduleDraft.type == 'OBSERVATION'">
                 <md-button role="menuitem" style="width: 170px; font-size:
-                14px; height: 38px; padding: 2px;"
+                14px; height: 38px; padding: 2px;" ng-disabled="!vm.selectedScheduleDraft.sub_nr" title="{{!vm.selectedScheduleDraft.sub_nr ? 'Assign to a Sub-Array before verifying.' : ''}}"
                 ng-click="vm.verifySelectedDraftRow()">Verify Draft</md-button>
             </md-item>
             <md-item>
