--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -55,14 +55,17 @@
                         <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
 
                         <div layout="row" class="schedule-block-name-div" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">
-                            <span class="schedule-block-id-text">{{item.id_code}}</span>
+                            <span class="schedule-block-id-text"
+                                  ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}">
+                                {{item.id_code}}</span>
                             <i>{{item.owner}}</i>
                         </div>
 
                         <span flex style="min-width: 300px; margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
 
                         <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                            <span style="text-transform: uppercase;">{{item.type}}</span>
+                            <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                  style="text-transform: uppercase;">{{item.type}}</span>
                         </div>
                         <span style="margin-left: 5px; margin-top: 4px; width: 64px; margin-right: 3px; overflow: hidden; white-space: normal">{{item.desired_start_time}}</span>
                         <span class="inline-sb-button" ng-if="item.pendingVerify"></span>
@@ -108,7 +111,8 @@
                               ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();"></span>
 
                         <div layout="row" class="schedule-block-name-div">
-                            <span class="schedule-block-id-text">{{item.id_code}}</span>
+                            <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                  class="schedule-block-id-text">{{item.id_code}}</span>
                             <i style="margin-left: 18px !important;">{{item.owner}}</i>
                         </div>
 
@@ -116,7 +120,8 @@
                             <span style="text-overflow: ellipsis;">{{item.description}}</span>
                         </div>
 
-                        <span style="min-width: 85px;">{{item.type}}</span>
+                        <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                              style="min-width: 85px;">{{item.type}}</span>
                         <span style="overflow: hidden; margin-left: 4px">{{item.desired_start_time}}</span>
                     </div>
                 </div>
