--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -11,9 +11,9 @@
                     <md-button layout="row" style="min-height: 42px;" class="unselectable md-toolbar-tools-small" ng-click="vm.navigateToSchedulerDetails(subarray.id)">
                         <span>Sub-Array {{subarray.id}}</span>
                         <md-toolbar flex ng-click="vm.navigateToSchedulerDetails(subarray.id)" layout="row" layout-align="center center"
-                                    ng-class="{'md-raised md-primary': subarray.in_maintenance, 'transparent-background': !subarray.in_maintenance}"
-                                   md-theme="{{subarray.in_maintenance ? 'purple' : subarray.state === 'in_use'? 'amber' : 'green'}}" class="md-hue-2 subarray-state-toolbar"
-                                   title="Click to Manage Observations for Sub-Array {{subarray.id}}">
+                                    ng-class="{'md-raised md-primary': subarray.in_maintenance}"
+                                    class="md-hue-2 subarray-state-toolbar transparent-background"
+                                    title="Click to Manage Observations for Sub-Array {{subarray.id}}">
                             <span>{{subarray.state + " "}}</span>
                             <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                         </md-toolbar>
@@ -53,13 +53,13 @@
                     </div>
 
                 </md-toolbar>
-                <div flex class="schedule-draft-data-list" style="border-left: 1px solid #d3d3d3; border-right: 1px solid #d3d3d3">
+                <div flex class="schedule-draft-data-list" style="border-left: 1px solid #d3d3d3; border-right: 1px solid #d3d3d3" ng-class="{'maintenance-bg':subarray.in_maintenance}">
                     <div style="min-width: 650px !important;"
                          ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id}"
                          class="schedule-draft-item animate-repeat" layout="column">
                         <div flex layout="row" layout-align="start center">
                             <div layout="row" class="schedule-block-name-div" style="cursor: text">
-                                <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                       class="schedule-block-id-text" style="cursor: pointer;" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
                                 <i>{{item.owner}}</i>
                             </div>
@@ -73,8 +73,9 @@
                             <span style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
                                 {{item.verification_state}}
                             </span>
+
                             <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                                <span ng-class="{'blue-color': item.type === 'MANUAL', 'purple-color': item.type === 'MAINTENANCE', 'green-color': item.type === 'OBSERVATION'}"
+                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                       style="text-transform: uppercase;">{{item.type}}</span>
                             </div>
 
