added d3 unit tests to test for directive creation and class setting

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensorGraph')">
-                        <span class="fa fa-area-chart"></span>
-                        <button>Sensor Graphs</button>
-                    </md-item-content>
-                </md-item>
+                <!--<md-item>-->
+                    <!--<md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensorGraph')">-->
+                        <!--<span class="fa fa-area-chart"></span>-->
+                        <!--<button>Sensor Graphs</button>-->
+                    <!--</md-item-content>-->
+                <!--</md-item>-->
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('video')">
                         <span class="fa fa-video-camera"></span>
