--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <script src="app/services/status-service.js"></script>
 <script src="app/health/health.js"></script>
 <script src="app/health/receptor-status/receptor-status.js"></script>
+<script src="app/health/custom-health/custom-health.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/d3/d3-chart-directive.js"></script>
 <script src="app/d3/d3-gantt-chart.js"></script>
@@ -291,6 +292,8 @@
 </div>
 
 <alarms-notifier ng-if="loggedIn"></alarms-notifier>
+<!--this button is for d3 created buttons to be able to easily infer the current theme, but we do not need to display it-->
+<md-button id="btnPrimaryTheme" class="md-primary md-raised" md-theme="{{themePrimaryButtons}}" style="display: none"></md-button>
 
 </body>
 </html>
