--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -1,6 +1,12 @@
 <div flex style="min-width: 1015px; min-height: 920px;" ng-controller="ReceptorStatusCtrl as vm">
-    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" layout-align="" ng-init="transparentLegend = true"
+    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
+        <md-button flex style="pointer-events: auto; width: 36px; height: 40px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
+                   ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
+                   aria-label="Show Legend" class="md-primary md-raised md-icon-button">
+            <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye" title="Show Legend"></md-icon>
+            <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash" title="Hide Legend"></md-icon>
+        </md-button>
         <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
             <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Nominal</span></div>
@@ -10,12 +16,6 @@
             <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
-        <md-button style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
-                   ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
-                   aria-label="Show Legend" class="md-primary md-raised">
-            <span ng-if="!showLegend" class="fa fa-eye" title="Show Legend"></span>
-            <span ng-if="showLegend" class="fa fa-eye-slash" title="Hide Legend"></span>
-        </md-button>
     </div>
     <div style="padding-left:16px; padding-right:16px; padding-top:8px;">
         <div md-theme="{{themePrimary}}" class="" layout="row" layout-align="start center" class="md-toolbar-tools-small">
