--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -14,7 +14,7 @@
                 </md-button>
             </div>
 
-            <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1;" layout="row" layout-align="center center">
+            <div flex class="unselectable list-subheader-title" layout="row" layout-align="center center">
                 <span style="max-width: 135px;min-width: 135px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
                     <span style="padding-left: 8px;">ID</span>
                     <span class="fa"
