--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <div layout="column" flex>
         <md-toolbar id="main-top-toolbar" ng-if="loggedIn" ng-show="vm.showNavbar" ng-class="{'slide-in-vertically-navbar': loggedIn}" class="md-whiteframe-z1" md-theme-watch="true">
-            <div class="md-toolbar-tools" layout="row" style="padding: 0; max-height: 56px;">
+            <div class="md-toolbar-tools" layout="row" style="padding: 0; max-height: 56px; overflow: hidden;">
 
                 <md-button class="md-icon-button mainbar-navbar-button" aria-label="Left Navbar" ng-click="vm.toggleLeftSidenav()">
                     <md-icon md-theme="white" class="fa md-primary" md-font-icon="fa-navicon"></md-icon>
